syntax ="proto3";

package product;
import "google/protobuf/empty.proto";
option go_package = "/proto/product";

message Product {
    string id = 1;
    string name = 2;
    uint64 quantity = 3;
    uint64 price = 4;
    bool is_active = 5;
}

message GetListResponse {
    repeated Product list = 1;
}
message CreateRequest {
    string name = 1;
    uint64 quantity = 2;
    uint64 price = 3;
    bool is_active = 4;
}

message GetByIdRequest {
    string id = 1;
}

service ServiceProductRPC {
    rpc GetById(GetByIdRequest) returns (Product) {}
    rpc GetList(google.protobuf.Empty) returns (GetListResponse);
    rpc Create(CreateRequest) returns (Product);
    rpc Update(Product) returns (Product);
}